# tracker-desktop

./: .gitignore  build_debug_2.txt  build_debug_clean.txt  index.html  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
src/: App.tsx
src-tauri/: Cargo.toml  build_log.txt  build_log_final.txt  build_log_manual.txt  build_log_sim.txt  build_log_utf8.txt  build_log_utf8_2.txt  build_log_utf8_3.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  lib.rs  logging.rs  main.rs  storage.rs  sync.rs  telemetry.rs
src/stores/: appStore.ts
src/styles/: globals.css
src/views/: DashboardView.tsx  LoginView.tsx
