[package]
name = "vtc-tracker-desktop"
version = "1.0.0"
description = "VTC Tracker Desktop Companion App"
authors = ["VTC Tracker"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "vtc_tracker_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
whoami = "1"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_Foundation",
] }

[profile.release]
strip = true
lto = false
codegen-units = 16
opt-level = 2
panic = "abort"
